Improvement : Prism blocks lines are now wrapped, trying prevent scrolling (better for print)

--- a/zip/main.css
+++ b/zip/main.css
@@ -412,3 +412,13 @@ ul:has(li input[type="checkbox"]) {
   word-break: break-all;
   overflow-wrap: anywhere;
 }
+
+pre[class*="language-"] {
+  white-space: pre-wrap;
+  word-break: break-word;
+  overflow-wrap: anywhere;
+}
+
+pre[class*="language-"] > code {
+  white-space: pre-wrap;
+}
